cleaned frontend for stats page

--- a/templates/tracking/stats.html
+++ b/templates/tracking/stats.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 
-Average Squirrel Coordinates: {{ avg_coords }}
-Most Common Squirrel Activity: {{ most_common_act }}
-Most Common Squirrel Response: {{ most_common_resp }}
-Most Common Squirrel Sound: {{ most_common_sound}}
-Most Common Squirrel Color: {{ most_common_color }}
+Average Squirrel Coordinates: {{ avg_coords }} </br>
+Most Common Squirrel Activity: {{ most_common_act }} </br>
+Most Common Squirrel Response: {{ most_common_resp }} </br>
+Most Common Squirrel Sound: {{ most_common_sound}} </br>
+Most Common Squirrel Color: {{ most_common_color }} </br>
 
 </body>
 </html>
